# Pomme

./: .gitignore  MANIFEST.in  Readme.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-wheel.yml  ci-test-pyversion.yml  ci.yml  deploy.yml  pr-check.yml  release-2mac-wheel.yml  release-linux-wheel.yml  release-linux2014-wheel.yml  release-mac-wheel.yml  release-win10-wheel.yml  release-windows-wheel.yml
pomme/: geoc_outputs.sh  model.c  pomme.c  pomme_wrapper.c  pypomme.py
pomme/cpomme/: model.c  model.h  pomme_wrapper.c  utils.c  utils.h
pomme/cpomme/src/: Gdef.h  POMME10_core.h  POMME10_sm2geo.h  POMME7_sm2geo.h  geod2geoc.c  gsm2geo.c  plmbar.c  pom.c  sm2geo.c  utils.h
pomme/lib/: Makefile  geoc_outputs.sh  model.c  pomme_calc.c  pomme_wrapper.c
pomme/lib/src/: geod2geoc.c  gsm2geo.c  gsm2geo.h  magfdz.c  pom.c  sm2geo.c
pomme/pomme.egg-info/: PKG-INFO  SOURCES.txt
pomme/src/: geod2geoc.c  int-ext.c  int-ext.h  magfdz.h  pom.c  sm2geo.c  sm2geo.h  struct.txt  utils.c
src/: Makefile  pomme_calc.c  pomme_calc.h  pomme_inputs_202310_202409.txt
src/lib/: POMME10_gsm2geo.h  POMME7_core.h  POMME7_gsm2geo.h  geod2geoc.h  gsm2geo.c  plmbar.h  pom.h
src/pomme.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: create_pomme_c_results.sh  create_pomme_results.sh  inputs_201503.txt  pomme_hon_201503.txt  pomme_inputs.csv  pomme_testvalues.txt  smoke_test_pypomme.py  test_pomme_calc.sh  test_pomme_wrapper.py  test_pypomme.py  test_pypomme_scientific.py
