[project]
name = "pomme"
version = "0.1.1"
description = "A test version of Pomme"
authors = [ {name = "Liam Kilcommons", email = "liam.kilcommons@noaa.gov"},
    { name = "Li-Yin Young", email = "liyin.young@noaa.gov" }]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/CIRES-Geomagnetism/Pomme.git"

[tool.setuptools]
packages = ["pomme"]
