[project]
name = "pomme"
version = "0.1.2"
description = "A Python wrapper for the POMME-10 geomagnetic field model"
authors = [ {name = "Liam Kilcommons", email = "liam.kilcommons@noaa.gov"},
    { name = "Li-Yin Young", email = "liyin.young@noaa.gov" }]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/CIRES-Geomagnetism/Pomme.git"

[tool.setuptools]
packages = ["pomme"]
