[project]
name = "pomme"
version = "0.1.5"
description = "A Python wrapper for the POMME-10 geomagnetic field model"
authors = [ {name = "Liam Kilcommons", email = "liam.kilcommons@noaa.gov"},
    { name = "Li-Yin Young", email = "liyin.young@noaa.gov" }]

requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/CIRES-Geomagnetism/Pomme.git"

[tool.cibuildwheel]
build = ["cp39-*","cp310-*","cp311-*","cp312-*","cp313-*"]
test-requires = "pytest"
test-command = "pytest tests"